# contextual

./: CMakeLists.txt  README.org  contextual-config.cmake.in  sanitizing-cache.cmake
cmake/: contextual_deps.cmake
contextual/: CMakeLists.txt  Derive.hpp  Monad.hpp  MonadPlus.hpp  MonadReader.hpp  Monoid.hpp  Run.hpp  Unit.hpp  config.hpp.in
contextual/details/: Alternative.hpp  Application.hpp  Applicative.hpp  Arrow.hpp  Category.hpp  Cofunctor.hpp  Conditional.hpp  Constant.hpp  Contextual.hpp  Derive.hpp  Deriving.hpp  Digest.hpp  Either.hpp  Expel.hpp  Foldable.hpp  Functor.hpp  Identity.hpp  Ingest.hpp  Injest.hpp  Magma.hpp  Monad.hpp  MonadCont.hpp  MonadFail.hpp  MonadPlus.hpp  MonadRWS.hpp  MonadReader.hpp  MonadState.hpp  MonadWriter.hpp  Monoid.hpp  Run.hpp  Semigroup.hpp  Unit.hpp  Wrapper.hpp  import.hpp
contextual/instances/: CTListContext.hpp  CTStringContext.hpp  FunctionContext.hpp  ListContext.hpp  ThunkContext.hpp  TypeContext.hpp
contextual_testing/: CMakeLists.txt  applicative_test.cpp  arrow_test.cpp  category_laws_test.cpp  category_test.cpp  contextual_test.cpp  ctlist_context_test.cpp  ctstring_context_test.cpp  derive_test.cpp  function_context_test.cpp  functor_laws_test.cpp  functor_test.cpp  list_context_test.cpp  magma_test.cpp  monad_fail_test.cpp  monad_laws_test.cpp  monad_plus_test.cpp  monad_reader_test.cpp  monad_rws_test.cpp  monad_state_test.cpp  monad_test.cpp  monad_writer_test.cpp  monoid_laws_test.cpp  monoid_test.cpp  semigroup_laws_test.cpp  semigroup_test.cpp  thunk_context_test.cpp  type_context_test.cpp
contextual_testing/laws/: CategoryLaws.hpp  FunctorLaws.hpp  MonadLaws.hpp  MonoidLaws.hpp  SemigroupLaws.hpp
